<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">膳食猎人</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">登陆</string>
    <string name="changebackground">切换背景</string>
    <string name="login_name">用户名</string>
    <string name="user_name">liguozhu</string>
    <string name="login_pwd">密    码</string>
    <string name="user_pwd">13388002817</string>
    <string name="action_settings">Settings</string>

</resources>
