<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlay_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="human.eternal.atdiet.AtDietActivity$PlaceholderFragment"
    android:background="@drawable/main_bg_00" >

    <ProgressBar 
        android:id="@+id/pbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/tv_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:text="@string/login" />
    <RelativeLayout 
        android:id="@+id/login_rlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/tv_log"
        android:layout_alignBottom="@id/tv_log"
        android:padding="5dp"
        android:background="@color/my_while"
        android:visibility="gone">
        <LinearLayout 
            android:id="@+id/llay_username"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_margin="2dp"
        	android:gravity="center"
        	android:orientation="horizontal">
	        <TextView
		        android:id="@+id/tv_login_name"
		        style="@style/noti_textview"
	            android:minWidth="70dp"
	        	android:gravity="center"
		        android:text="@string/login_name" />
	        <EditText 
	            android:id="@+id/et_login_name"
	            style="@style/noti_textview"
	            android:inputType="text"
	            android:minWidth="150dp"
	            android:text="@string/user_name"
	            android:hint="@string/login_name"/>
        </LinearLayout>            
        <LinearLayout 
            android:id="@+id/llay_pwd"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:gravity="center"
        	android:layout_margin="2dp"
        	android:layout_below="@id/llay_username"
        	android:orientation="horizontal">
	        <TextView
		        android:id="@+id/tv_login_pwd"
		        style="@style/noti_textview"
	        	android:gravity="center"
	            android:minWidth="70dp"
		        android:text="@string/login_pwd" />
	        <EditText 
	            android:id="@+id/et_login_pwd"
	            style="@style/noti_textview"
	            android:inputType="text"
	            android:minWidth="150dp"
	            android:text="@string/user_pwd"
	            android:hint="@string/login_pwd"/>
        </LinearLayout>
            
        <Button 
            android:id="@+id/btn_login"
            style="@style/layout_both_wrap"
            android:text="@string/login"
            android:minWidth="150dp"
	        	android:gravity="center"
            android:layout_margin="10dp"
            android:layout_below="@id/llay_pwd"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_cbg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/changebackground" />

</RelativeLayout>
